<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:gravity="center"
    android:layout_marginBottom="20dp"
    android:padding="7dp">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="efvefvefve"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-condensed-medium"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edittext_input">

            <Button
                android:id="@+id/but_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/translate"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground" />

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="From Language"
                android:layout_toStartOf="@id/but_arrow"
                android:layout_toLeftOf="@id/but_arrow">

                <AutoCompleteTextView
                    android:id="@+id/et_from_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:requiresFadingEdge="horizontal"
                    android:spinnerMode="dialog"
                    android:text="@string/swahili" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:hint="To Language"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/but_arrow"
                android:layout_toRightOf="@id/but_arrow">

                <AutoCompleteTextView
                    android:id="@+id/et_to_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:text="@string/english" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_input"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:gravity="start"
                        android:hint="@string/type_input"
                        android:lines="4"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideOverlay"
                        android:scrollbars="vertical"
                        android:windowSoftInputMode="stateAlwaysHidden" />
                </ScrollView>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/but_clear"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/clear"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/but_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edittext_input"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/translate"
            android:textAllCaps="true" />

        <LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ad_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>