<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context="com.namsweatech.translate.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittext_input">

                <Button
                    android:id="@+id/but_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/translate"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground" />

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="From Language"
                    android:layout_toStartOf="@id/but_arrow"
                    android:layout_toLeftOf="@id/but_arrow">

                    <AutoCompleteTextView
                        android:id="@+id/et_from_lang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="6dp"
                        android:background="#00ffffff"
                        android:requiresFadingEdge="horizontal"
                        android:spinnerMode="dialog"
                        android:text="@string/swahili" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="2dp"
                    android:hint="To Language"
                    android:layout_toEndOf="@id/but_arrow"
                    android:layout_toRightOf="@id/but_arrow">

                    <AutoCompleteTextView
                        android:id="@+id/et_to_lang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="6dp"
                        android:background="#00ffffff"
                        android:text="@string/english" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/edittext_input"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/et_input_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#ffffff"
                            android:gravity="start"
                            android:hint="@string/type_input"
                            android:lines="4"
                            android:overScrollMode="always"
                            android:scrollbarStyle="insideOverlay"
                            android:scrollbars="vertical"
                            android:windowSoftInputMode="stateAlwaysHidden" />
                    </ScrollView>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/but_clear"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/clear"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground" />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/but_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittext_input"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/translate"
                android:textAllCaps="true" />

            <LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/output_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="#fff"
                            android:indeterminate="true"
                            android:indeterminateDrawable="@drawable/progress_bg"
                            android:progress="0"
                            android:visibility="gone"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ad_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/preparingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Preparing ..."
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>